--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -11,11 +11,12 @@
     "oidc-client": "^1.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-icons": "^3.8.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.0.1",
     "react-star-rating-component": "^1.4.1",
-    "reactstrap": "^6.3.0",
+    "reactstrap": "8.1.1",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
